force-app/main/default/objects/FLODocs__FLO_Health_Check__c/FLODocs__FLO_Health_Check__c.object-meta.xml
<CustomObject>
    <label>FLO Health Check</label>
    <nameField>
        <label>FLO Health Check Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FLO Health Checks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>