force-app/main/default/objects/FLODocs__FLO_Health_Check__c/fields/FLODocs__PP_expiration__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__PP_expiration__c</fullName>
    <inlineHelpText>User passwords expire in</inlineHelpText>
    <label>PP expiration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>