force-app/main/default/objects/FLODocs__FLO_Health_Check__c/fields/FLODocs__PP_minimumPasswordLifetime__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__PP_minimumPasswordLifetime__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Require a minimum 1 day password lifetime</inlineHelpText>
    <label>PP minimumPasswordLifetime</label>
    <type>Checkbox</type>
</CustomField>