force-app/main/default/objects/FLODocs__FLO_Health_Check__c/fields/FLODocs__SS_EnableClickjackSetup__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__SS_EnableClickjackSetup__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable clickjack protection for Setup pages</inlineHelpText>
    <label>SS EnableClickjackSetup</label>
    <type>Checkbox</type>
</CustomField>