force-app/main/default/objects/FLODocs__FLO_Health_Check__c/fields/FLODocs__SS_EnforceIpRangesEveryRequest__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__SS_EnforceIpRangesEveryRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enforce login IP ranges on every request</inlineHelpText>
    <label>SS EnforceIpRangesEveryRequest</label>
    <type>Checkbox</type>
</CustomField>