force-app/main/default/objects/FLODocs__FLO_Health_Check__c/fields/FLODocs__SS_forceLogoutOnSessionTimeout__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__SS_forceLogoutOnSessionTimeout__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Force logout on session timeout</inlineHelpText>
    <label>SS forceLogoutOnSessionTimeout</label>
    <type>Checkbox</type>
</CustomField>